# stellarium

./: CMakeLists.txt
plugins/PushToArduino/: CMakeLists.txt  PushToArduino.qrc
plugins/PushToArduino/src/: CMakeLists.txt  PTAHelpers.hpp  PushToArduino.cpp  PushToArduino.hpp  PushToSerialComm.cpp  PushToSerialComm.hpp
plugins/PushToArduino/src/gui/: PushToArduinoDialog.cpp  PushToArduinoDialog.hpp  pushToArduinoDialog.ui
src/core/: StelApp.cpp
